@@ -2,6 +2,7 @@
 Version: 0.3.1
   Bugfixes:
     - Fix "Duplicate link index" crashes (caused by recipes having the same item as input/output) (https://mods.factorio.com/mod/dana/discussion/62f7d0c5438d5c033845f57f)
+    - Fix some crashes on first install (cause: minable entities not yielding anything) (https://mods.factorio.com/mod/dana/discussion/62f76409c19ed12ad1eca777)
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.0
